# TaskWatch_plus

./: README.md  ideas.md  install.sh  pyproject.toml  session-ses_11a1.md  taskwatch.desktop
.github/workflows/: release.yml
.opencode/commands/: release.md
config/: config.txt  theme_default.css
taskwatch/: ai_client.py  archive_cmds.py  calcurse_cmds.py  cli.py  db.py  directory_cmds.py  io_cmds.py  log.py  models.py  note_cmds.py  paths.py  server.py  stats_cmds.py  subtask_cmds.py  tag_cmds.py  task_cmds.py  timer.py  timer_daemon.py  timer_sessions.py  tui.py  tui_helpers.py  tui_timer.py  tui_widgets.py  tui_wizards.py  undo_cmds.py
taskwatch.egg-info/: SOURCES.txt  entry_points.txt
tests/: test_ai_client.py  test_archive_cmds.py  test_calcurse_cmds.py  test_db.py  test_directory_cmds.py  test_io_cmds.py  test_note_cmds.py  test_stats_cmds.py  test_subtask_cmds.py  test_tag_cmds.py  test_task_cmds.py  test_timer.py  test_timer_daemon.py  test_timer_sessions.py  test_undo_cmds.py
