[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskwatch"
version = "0.1.1"
description = "A system-integrated task tracker with Waybar support"
requires-python = ">=3.11"
dependencies = ["urwid>=4.0.0"]

[project.scripts]
taskwatch = "taskwatch.__main__:main"

[tool.setuptools]
packages = ["taskwatch"]
