[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskwatch"
version = "0.2.8"
description = "A system-integrated task tracker with Waybar support"
requires-python = ">=3.11"
dependencies = ["urwid>=4.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
taskwatch = "taskwatch.__main__:main"

[tool.setuptools]
packages = ["taskwatch"]

[tool.setuptools.package-data]
taskwatch = ["../update.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I"]
